--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,9 +4,9 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Cool logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
+			<img src="/img/blog-vi/logo.svg" alt="Cool logo" class="db w4 center mb4 br0">
+			<p class="f3 lh-title light-gray b tc mb2">Charlie Blog</p>
+			<p></p>
 
 			{{ partial "newsletter-form" . }}
 
@@ -18,7 +18,7 @@
 				<h3 class="f4 b lh-title mb1 primary">Cool</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
+					<li><a href="/products" class="link">Products</a></li>
 					<li><a href="/values" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
@@ -36,10 +36,11 @@
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
+					{{ partial "social-icon" (dict "link" "https://plus.google.com/+leicao" "svg" "icons-facebook") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+					{{ partial "social-icon" (dict "link" "#" "svg" "icons-youtube") }}
 				</ul>
 			</div>
 
